--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,12 @@ repositories {
     mavenCentral()
 }
 
+/*
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
     from javadoc
 }
+*/
 
 task sourcesJar(type: Jar) {
     classifier = 'sources'
@@ -25,12 +27,15 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-    archives javadocJar, sourcesJar
+    //archives javadocJar, sourcesJar
+    archives sourcesJar
 }
 
+/*
 signing {
     sign configurations.archives
 }
+*/
 
 dependencies {
 
@@ -63,6 +68,7 @@ dependencies {
     compile group: 'org.eclipse.jetty.websocket', name: 'websocket-client', version: '9.4.7.v20170914'
 }
 
+/*
 uploadArchives {
     repositories {
         mavenDeployer {
@@ -105,3 +111,4 @@ uploadArchives {
         }
     }
 }
+*/
